--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "description": "A Simple Setup for Using the Gemini API",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node --env-file=.env index.js",
+    "dev": "nodemon --env-file=.env index.js"
   },
   "keywords": [],
   "author": "Nir Gluzman",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {}
 }
