--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
   "keywords": [],
   "author": "Nir Gluzman",
   "license": "ISC",
-  "dependencies": {}
+  "dependencies": {
+    "@google/generative-ai": "^0.14.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
+  }
 }
