--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "author": "Nir Gluzman",
   "license": "ISC",
   "dependencies": {
-    "@google/generative-ai": "^0.14.1"
+    "@google/generative-ai": "^0.14.1",
+    "fs": "^0.0.1-security"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
